--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRM</title>
+    <link rel="icon" href="crm.ico" type="image/x-icon">
+    <title>CRM pro</title>
   </head>
   <body>
     <div id="root"></div>
